--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,7 @@
   --body-copy: "Lora", serif;
   --condensed-copy: "Barlow Semi Condensed", sans-serif;
   --sans-serif: "Rubik", sans-serif;
+  --highlight: "#000000";
 }
 
 /* Base */
