--- a/src/styles/article.css
+++ b/src/styles/article.css
@@ -5,6 +5,11 @@ article {
   padding: 1.5rem 8rem;
 }
 
+article p {
+  margin: 1.4rem 0;
+  line-height: 1.4;
+}
+
 article .title,
 article .author {
   text-align: center;
@@ -32,7 +37,26 @@ article blockquote {
 }
 
 .author {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 0.8rem;
+  gap: 1rem;
+}
+
+.order {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+  border: 2px solid var(--highlight);
+  transform: rotate(45deg);
+}
+
+.order span {
+  display: block;
+  transform: rotate(-45deg);
 }
 
 .tags {
@@ -55,7 +79,8 @@ article blockquote {
 }
 
 article a,
-article sup {
+article sup,
+.speaker {
   color: var(--highlight);
 }
 
@@ -77,4 +102,27 @@ article sup {
 
 sup a {
   padding: 0 0.25rem;
+}
+
+article figure {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+  max-width: 100%;
+  text-align: center;
+}
+
+article figcaption {
+  font-family: var(--sans-serif);
+  font-size: 0.8rem;
+}
+
+article img {
+  display: block;
+  max-width: 100%;
+}
+
+.speaker,
+.question {
+  font-weight: bold;
 }
