--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -9,8 +9,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-family: var(--sans-serif);
+  text-transform: uppercase;
   text-align: center;
   width: 100px;
   padding: 0.5rem;
   border: 4px solid white;
+}
+
+.main-menu__item a {
+  color: white;
 }
