--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -2,9 +2,11 @@
   min-height: 100vh;
   display: grid;
   grid-template-columns: 200px 1fr;
+  gap: 1rem;
 }
 
 .pubgrid {
   display: grid;
   grid-template-columns: 300px 1fr;
+  gap: 1rem;
 }
