remaining tom articles

--- a/src/styles/article.css
+++ b/src/styles/article.css
@@ -136,6 +136,10 @@ article img {
   text-align: center;
 }
 
+.italic {
+  font-style: italic;
+}
+
 article cite {
   display: block;
   margin: 0.5rem 0;
