--- a/src/styles/article.css
+++ b/src/styles/article.css
@@ -141,18 +141,31 @@ article img {
 }
 
 article cite {
+  position: relative;
   display: block;
-  margin: 0.5rem 0;
+  margin: 1rem 0 1rem 1.2rem;
   font-style: normal;
   font-size: 0.9rem;
 }
 
+article cite sup {
+  position: absolute;
+  top: 0;
+  left: -1.2rem;
+}
+
+article .long-annotations cite {
+  padding-left: 1.4rem;
+}
+
 .bibliography {
   list-style: none;
+  padding-left: 1.5rem;
+  border-left: 10px solid #e5e5e5;
 }
 
 .bibliography li {
-  margin: 0.8rem 0;
+  margin: 1.5rem 0;
 }
 
 .two-up {
