--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -4,4 +4,4 @@ font-family: 'Lora', serif;
 font-family: 'Rubik', sans-serif;
 */
 
-@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed&family=Lora:ital,wght@0,500;0,700;1,500;1,700&family=Rubik&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed&family=Lora:ital,wght@0,500;0,700;1,500;1,700&family=Rubik:ital,wght@0,400;0,700;1,400&display=swap");
