--- a/src/styles/article.css
+++ b/src/styles/article.css
@@ -158,6 +158,11 @@ article .long-annotations cite {
   padding-left: 1.4rem;
 }
 
+article cite.main-citation {
+  margin-left: 0;
+  padding-left: 0;
+}
+
 .bibliography {
   list-style: none;
   padding-left: 1.5rem;
